# ASTL

./: .10x  .gitignore  ASTL.sln  Algorithms.hpp  Array.hpp  BVH.cpp  BVH.hpp  Bitset.hpp  CMakeLists.txt  CPURayTrace.cpp  CPURayTrace.hpp  Common.hpp  Containers.hpp  Dictionaries.hpp  GLTFParser.cpp  GLTFParser.hpp  HashMap.hpp  HashSet.hpp  IO.hpp  IntFltTypesLimits.hpp  Memory.hpp  Noise.hpp  Profiler.cpp  Profiler.hpp  Queue.hpp  README.md  Random.hpp  RedBlackTree.hpp  Renderer.cpp  Renderer.hpp  Stack.hpp  String.hpp  TestBuild.bat  Window.cpp  Window.hpp  build.bat  glad.hpp  icon.rc  icon.res  info.rc  (+2 more)
ASTL/: ASTL.cpp  ASTL.vcxproj  ASTL.vcxproj.filters  Aditional.hpp  AdventOfCodeTests.cpp  Algorithms.hpp  Array.hpp  BVH.cpp  BVH.hpp  Bitset.hpp  CPURayTrace.cpp  CPURayTrace.hpp  Common.hpp  DenseHashMap.hpp  HashMap.hpp  HashSet.hpp  IntFltTypesLimits.h  IntFltTypesLimits.hpp  Memory.hpp  Profiler.cpp  Profiler.hpp  Queue.hpp  RBTree.hpp  Random.hpp  RedBlackTree.hpp  SegmentedArray.hpp  Stack.hpp  String.hpp  Timer.hpp  project.10x
ASTL/Math/: Camera.hpp  Math.hpp  Matrix.hpp  Quaternion.hpp  SIMDCommon.hpp  Transform.hpp  Vector.hpp  Vector4.hpp
ASTL/MultiThreading/: Common.hpp  ParallelFor.hpp  Semaphore.hpp  ThreadPool.cpp  ThreadPool.hpp
Additional/: BVH.cpp  CPURayTrace.cpp  CPURayTrace.hpp  GLTFParser.cpp  GLTFParser.hpp  OBJParser.cpp  Profiler.cpp  Profiler.hpp
Aditional/: Aditional.hpp
Math/: Camera.hpp  Color.hpp  Half.hpp  Math.hpp  Matrix.hpp  Quaternion.hpp  SIMDCommon.hpp  SIMDVectorMath.hpp  Transform.hpp  Vector.hpp
Meshes/: Cube.gltf
MultiThreading/: ParallelFor.cpp  Semaphore.hpp  ThreadPool.cpp  ThreadPool.hpp
Shaders/: 3DFirstFrag.glsl  3DFirstVert.glsl
Test/: 2021Day1.txt  2021Day2.txt  2021Day3.txt  2021Day5.txt  2023Day1.txt  2023Day4.txt  AOC12.txt  ASTL.cpp  AdventOfCode2021.cpp  AdventOfCode2022.cpp  AdventOfCode2023.cpp  AdventOfCodeTests.cpp  Count_LineOfCodes.bat  Profiler.cpp
